tests/baselines/reference/parserStatementIsNotAMemberVariableDeclaration1.errors.txt
error TS-1: Pre-emit (2) and post-emit (3) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
parserStatementIsNotAMemberVariableDeclaration1.ts(1,1): error TS1108: A 'return' statement can only be used within a function body.
parserStatementIsNotAMemberVariableDeclaration1.ts(6,5): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.


!!! error TS-1: Pre-emit (2) and post-emit (3) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2304 parserStatementIsNotAMemberVariableDeclaration1.ts:6:5: Cannot find name 'private'.
==== parserStatementIsNotAMemberVariableDeclaration1.ts (2 errors) ====
    return {
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
    
      "set": function (key, value) {
    
        // 'private' should not be considered a member variable here.
        private[key] = value;
        ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
    
      }
    
    };